package Being;

public class Empty extends Being{
    public Empty(Tile tile) {
       super(tile,"Empty");
    }

}
