package Being;

public class Wall extends Being {
    public Wall(Tile tile) {
        super(tile, "Wall");
    }
}
