@startuml
class Being {
    private Tile tile
    private String name
    public Being(Tile tile, String name)
    public Being(String name)
    public String getName()
    public void setName(String name)
    public boolean beOccupied()
    public void setCreature(Creature creature)
    public void creatureMoveOut()
}

class Creature {
    private int hp
    private int speed
    private int atk 
    private int max_hp
    private boolean atk_mode
    private String name
    private World world
    private Tile cur_tile
    public Creature()
    public Creature(int hp, int atk, int speed, boolean atk_mode, World world) 
    public Creature(String name)
    public String getName()
    public void setName(String name)
    synchronized public void setHp(int hp)
    public void setMaxHp(int max_hp)
    public void setAtk(int atk)
    public void setSpeed(int speed)
    public int getHp() 
    public int getMax_hp()
    public int getSpeed()
    public int getAtk()
    public boolean isDead()
    public boolean getAtkMode()
    public void setCur_tile(Tile tile)
    public void readFromTxt()
    public void setWorld(World world)
    public World getWorld()
    public Tile getCur_tile()
    public void setAtk_mode(boolean atk_mode)
}

class Empty {
    public Empty(Tile tile)
}

class Road {
    private Creature creature
    private boolean occupied
    public Road(Tile tile, String name)
    public Road(Tile tile)
    public boolean beOccupied()
    synchronized public void setCreature(Creature creature) 
    public void creatureMoveOut()
}

class Wall {
    public Wall(Tile tile)
}

class Role {
    public Role(String name)
    public void readFromTxt()
}

class World {
    private int level
    private Tile[][] map
    public World(int level)
    public Tile[][] getMap()
    public int[][] mapToInt()
    public Tile findEmpty()
    public Tile findEmptyExcept(Tile except)
}

public class Tile {
    private int x, y
    private Being being
    public Tile(int x, int y, Being being)
    public Tile(int x, int y)
    public Tile(String line)
    public Being getBeing()
    synchronized public boolean creatureMoveToTile(Creature creature)
    public void creatureMoveOut()
    public void setBeing(Being being)
    public int getX()
    public int getY() 
    public boolean isWall() 
    public boolean isRoad()
}
Wall--|>Being
Empty--|>Being
Road--|>Being
Role--|>Creature

@enduml